[dependencies]
clap = { version = "4.0", features = ["derive"] }
dialoguer = "0.10.4"  # Explicitly specify the version
tide = "0.16.0"
async-std = "1.12.0"

[package]
name = "dypi"
version = "0.1.4"
authors = ["Yash Yadav <yash2yk2@gmail.com>"]
edition = "2021"
license = "MIT"
description = "A CLI tool to create Rust APIs"
homepage = "https://github.com/YASH-YADAV-dynamo/dypi.git"
repository = "https://github.com/YASH-YADAV-dynamo/dypi.git"
readme = "README.md"
keywords = ["cli", "rust", "tide", "api"]
categories = ["command-line-utilities", "development-tools"]

